<resources>
    <string name="ok">OK</string>
    <string name="default_conf">Default</string>
    <string name="snap_to_cloest_level">snap to closest zoom level</string>
    <string name="draw_by_opengl">draw by opengl</string>
    <string name="fading_time">fading time</string>
    <string name="border">border</string>
    <string name="tile_thread_count">tile loading thread num</string>
    <string name="input_valid_fading_time">Please input valid integer fading time</string>
    <string name="input_valid_border">Please input valid integer border</string>
    <string name="input_valid_tile_thread_count">Please input valid integer tile thread num</string>
    <string name="all">全部</string>
    <string name="old_app_name">老虎宝典</string>
    <string name="app_name">老虎地图</string>
    <string name="send_sms">发短信</string>
    <string name="send_mms">发彩信</string>
    <string name="send_weibo">发微博</string>
    <string name="quit">退出</string>
    <string name="clean_history_message">你要清除所有记录？</string>
    <string name="advice_open_gps_title">提高“我的位置”精确度</string>
    <string name="location_failed_and_jump_settings">为了提高定位精度，建议开启‘设置&gt;位置’中的GPS功能</string>
    <string name="location_doing">正在定位…</string>
    <string name="prompt_location">定位提示</string>
    <string name="prompt_location_return_to_">回到%1$s</string>
    <string name="prompt_location_stay_in_">留在%1$s</string>
    <string name="setting_success">设置成功</string>
    <string name="location_text">定位</string>
    <string name="location_text_doing">定位中</string>
    <string name="location_text_navigation">导航</string>
    <string name="location_text_compass">罗盘</string>
	<string name="location_unknown">未知地点</string>
	<string name="click_compass_to_reset_map">要恢复地图方向,请点击指北针</string>
    <string name="go_buy">立即抢购</string>
    <string name="poi_change_location">切换位置</string>
    <string name="yuan">%1$d元</string>
    <string name="rmb_text">元</string>
    <string name="map">地图</string>
    <string name="back">返回</string>
    <string name="back_home">返回首页</string>
    <string name="view_list">查看列表</string>
    <string name="view_map">查看地图</string>
    <string name="result_list">结果列表</string>
    <string name="result_map">结果地图</string>
    <string name="clear">清空</string>
    <string name="poi_result_tip">点击地图按钮可查看地图</string>
    <string name="distance">距</string>
    <string name="me">我</string>
    <string name="distanceA">距地标</string>
    <string name="double_bracket">【%1$s个】</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="start_text">起点：%1$s</string>
    <string name="end_text">终点：%1$s</string>
    <string name="start">起点</string>
    <string name="end">终点</string>
    <string name="start_">请输入起点</string>
    <string name="end_">请输入终点</string>
    <string name="busline_">线路：%1$s</string>
    <string name="favorite_empty_poi">记录为空。\n快去收藏常用的地点吧！</string>
    <string name="favorite_empty_traffic">记录为空。\n快去收藏常用的交通路线吧！</string>
    <string name="history_empty">记录为空。</string>
    <string name="rename">重命名</string>
    <string name="map_center">地图中心</string>
    <string name="map_select_point">地图选点</string>
    <string name="category_search">分类搜索</string>
    <string name="precision_search">精确搜索</string>
    <string name="nearby_search">周边搜索</string>
    <string name="quote_nearby_search">”周边搜索</string>
    <string name="add_favorite">收藏</string>
    <string name="cancel_favorite">取消收藏</string>
    <string name="send_friend">发给好友</string>
    <string name="select_action">选择操作</string>
    <string name="delete_map">删除地图</string>
    <string name="pause_download">暂停下载</string>
    <string name="upgrade_map">升级地图</string>
    <string name="upgrade_map_new">地图更新啦！</string>
    <string name="deleteing_map">正在删除旧版地图数据</string>
    <string name="at_where_search">在“%1$s</string>
    <string name="select_where_as_start">选择\u0020%1$s\u0020作为起点</string>
    <string name="select_where_as_end">选择\u0020%1$s\u0020作为终点</string>
    <string name="click_map_as_start">点击地图选择起点</string>
    <string name="click_map_as_end">点击地图选择终点</string>
    <string name="at_where_discover">发现：在%1$s进行发现 </string>
    <string name="at_where_discover_how">在"%1$s"发现%2$s个</string>
    <string name="discover_exist_tip">已经更新发现结果</string>
    <string name="init_map_dir_title">初始化地图数据</string>
    <string name="init_map_dir_message">程序异常退出可能是因为使用过程中地图数据文件损坏，建议你删除损坏的地图数据文件?</string>
    <string name="correct_to_how">精确到%1$s</string>
    <string name="are_your_change_to_location_city">定位显示您在%1$s，您是否需要</string>
    <string name="are_your_change_to_map_center_city">你的地图已经切换到%1$s，是否切换？</string>
    <string name="current_location">我的位置：%1$s附近</string>
    <string name="find_poi">搜索地点&#160;&#160;商户&#160;&#160;线路等</string>
    <string name="input_place_line">输入地点&#160;&#160;商户&#160;&#160;线路等</string>
    <string name="find_poi_merchant">输入地点、商户名</string>
    <string name="no_comment">目前暂无评论</string>
    <string name="hotspot">热点</string>
    <string name="home">首页</string>
    <string name="search_nearby">搜索周边</string>
    <string name="detail_info">详情信息</string>
    <string name="edit">编辑</string>
    <string name="all_select">全选</string>
    <string name="cancel_all_select">取消全选</string>
    <string name="feature">特点：</string>
    <string name="doing_and_wait">奋力请求中，请稍候</string>
    <string name="network_failed">网络连接出错，请稍候重试</string>
    <string name="no_network">无网络可用，请检查网络后重试</string>
    <string name="network_error">网络连接出错</string>
    <string name="map_download_input_hit">请输入省市名称或拼音</string>
    <string name="download">下载</string>
    <string name="stop">停止</string>
    <string name="completed">完成</string>
    <string name="upgrade">升级</string>
    <string name="may_upgrade">可更新</string>
    <string name="exist_download_list">已添加到下载列表</string>
    <string name="add">添加</string>
    <string name="all_province">全省下载</string>
    <string name="map_static_waiting_tip">地图信息读取中...</string>
    <string name="chengshi">城市</string>
    <string name="city">市</string>
    <string name="province">省</string>
    <string name="please_add_city">请先添加城市...</string>
    <string name="off_line_">想提高速度节省流量？去官网下载离线地图包！>></string>
    <string name="map_download_tip">地图下载中...</string>
    <string name="map_download_collect_info_tip">%1$s地图下载信息收集中...</string>
    <string name="map_download_progress_tip">%1$s市地图 %2$s%%</string>
    <string name="downloading_">正在下载\u0020\u0020%1s%%</string>
    <string name="waiting_download_">等待下载\u0020\u0020%1s%%</string>
    <string name="downloaded_">已暂停\u0020\u0020%1$s%%</string>
    <string name="map_download_mutile_thread_tip">同时下载过多，可能影响查询速度...</string>
    <string name="download_software_title">新版本软件下载</string>
    <string name="tip_longpress_select_traffic">长按可选择交通查询起终点</string>
    <string name="current_city">当前城市: %1$s</string>
    <string name="query">查找</string>
    <string name="bus_transfer">公交驾车</string>
    <string name="public_traffic">公交</string>
    <string name="drive">驾车</string>
    <string name="walk">步行</string>
    <string name="input_start_station">输入起点</string>
    <string name="transfer_drive">公交驾车</string>
    <string name="busline">线路</string>
    <string name="from">从</string>
    <string name="to">到</string>
    <string name="transfer_non_support_city_tip">找不到您要的跨城市公交换乘方案</string>
    <string name="drive_non_support_city_tip">找不到您要的跨城市自驾方案</string>
    <string name="walk_non_support_city_tip">找不到您要的跨城市步行方案</string>
    <string name="transfer_non_tip">找不到您要的公交换乘方案</string>
    <string name="drive_non_tip">找不到您要的自驾方案</string>
    <string name="walk_non_tip">找不到您要的步行方案</string>
    <string name="busline_non_tip">目前找不到你要的公交线路信息！</string>
    <string name="busline_not_support">本城市暂不支持公交线路查询！</string>
    <string name="forget_all_tip">你忘记输入起点和终点啦！</string>
    <string name="forget_start_tip">请输入起点！</string>
    <string name="forget_end_tip">请输入终点！</string>
    <string name="input_valid_tip">没有找到起点或终点，你可以换一个词或在地图上选点试试！</string>
    <string name="start_equal_to_end">起终点重合,请重新设置</string>
    <string name="busline_name_">请输入线路名或站点名</string>
    <string name="busline_search_hint">输入线路 站点名</string>
    <string name="traffic_search_hint">输入地点</string>
    <string name="transfer_operation_time">运营时间:\u0020\u0020%1$s</string>
    <string name="bus_index_station">%1$d. %2$s</string>
    <string name="favorite_poi_empty">你还没有任何收藏</string>
    <string name="mylocation_failed">对不起, 定位失败, 请重试...</string>
    <string name="find_return">查看返程</string>
    <string name="title_type_transfer">公交方案</string>
    <string name="title_type_drive">驾车方案</string>
    <string name="title_type_walk">步行方案</string>
    <string name="title_transfer_plan">公交详情</string>
    <string name="title_transfer_plan_popup">方案%1$s</string>
    <string name="title_walk_plan">步行详情</string>
    <string name="title_drive_plan">驾车详情</string>
    <string name="title_busline_result">线路列表</string>
    <string name="title_busline_line">线路详情</string>
    <string name="title_busline_line_popup">线路%1$s</string>
    <string name="title_station_result">站点列表</string>
    <string name="title_traffic_result_map">交通地图</string>
    <string name="title_transfer_result_map">公交地图</string>
    <string name="title_drive_result_map">驾车地图</string>
    <string name="title_walk_result_map">步行地图</string>
    <string name="title_busline_result_map">线路地图</string>
    <string name="title_click_map">地图选点</string>
    <string name="title_traffic_search_history">近期搜索路线</string>
    <string name="common_place_home">家</string>
    <string name="title_popup_content">%1$d. %2$s</string>
    <string name="poi_detail_not_next_tip">已经是最后一个了</string>
    <string name="poi_detail_not_previous_tip">已经是最前一个了</string>
    <string name="back_what_city">回%1$s市</string>
    <string name="favorite_toast">已收藏到“更多-收藏夹”</string>
    <string name="delete">删除</string>
    <string name="view">查看</string>
    <string name="delete_all">全部删除</string>
    <string name="share_to_friend">发送给好友</string>
    <string name="compass">指南针</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="login">登录</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再次输入新密码</string>
    <string name="regist">注册</string>
    <string name="please_input_11_phone">请输入手机号</string>
    <string name="please_input_11_new_phone">请输入新手机号</string>
    <string name="please_input_4_validate_num">请输入验证码</string>
    <string name="please_input_616_password">请输入密码</string>
    <string name="please_input_616_password_again">请再次输入密码</string>
    <string name="reqest_validate_num">点击获取验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="phone_empty_tip">请输入手机号</string>
    <string name="new_phone_empty_tip">请输入新手机号</string>
    <string name="code_empty_tip">请输入验证码</string>
    <string name="password_empty_tip">请输入密码</string>
    <string name="re_password_empty_tip">请再次输入密码</string>
    <string name="old_password_empty_tip">请输入旧密码</string>
    <string name="new_password_empty_tip">请输入新密码</string>
    <string name="phone_format_error_tip">手机号格式不正确, 请重新输入11位手机号</string>
    <string name="password_format_error_tip">密码必须由6-16位数字或字母组成, 区分大小写</string>
    <string name="password_union_error_tip">密码输入不一致, 请重新输入</string>
    <string name="confirm">确定</string>
    <string name="choose_hotel">1.选择酒店</string>
    <string name="choose_room_type">2.选择房型</string>
    <string name="fill_order">3.填写订单</string>
    <string name="reserve_success">4.预订成功</string>
    <string name="erreport_name_error">名称错误</string>
    <string name="erreport_address_error">地址错误</string>
    <string name="erreport_not_exist">地点不存在</string>
    <string name="erreport_redundancy">地点重复</string>
    <string name="erreport_location_error">地图标注错误</string>
    <string name="erreport_other_error">其他错误</string>
</resources>