<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/gray_dark"
    android:id="@+id/root_view" >
    	
	<include android:id="@+id/title_view"
     	layout="@layout/title" 
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content" />
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:layout_below="@+id/title_view" >
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="8dp" >
		    
	        <com.tigerknows.ui.user.ExtValidationEditText
		        android:id="@+id/phone_edt"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="8dp"
		        android:inputType="phone"
		        android:singleLine="true"
		    	android:maxLength="11"
		        android:ellipsize="end"
		        android:textSize="18sp"
		        android:hint="@string/please_input_11_new_phone"
	            android:background="@drawable/list_single_normal"
		        flag="0"
		        validateType="phone"
		        emptyErrorTip="@string/new_phone_empty_tip"
		        formatErrorTip="@string/phone_format_error_tip" />
		        
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dp" >
		        
		        <com.tigerknows.ui.user.CountDownButton
			        android:id="@+id/vali_num_btn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:layout_marginRight="8dp"
			        android:padding="13dp"
			        android:text="@string/reqest_validate_num"
			        android:textSize="16sp"
			        android:textColor="@color/black"
			        android:background="@drawable/btn_valicode" />
		        <com.tigerknows.ui.user.ExtValidationEditText
			        android:id="@+id/vali_num_edt"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@id/vali_num_btn"
			        android:layout_centerVertical="true"
			        android:padding="8dp"
			        android:inputType="number"
			        android:singleLine="true"
			        android:maxLength="4"
			        android:ellipsize="end"
			        android:textSize="18sp"
			        android:hint="@string/please_input_4_validate_num"
	                android:background="@drawable/list_single_normal"
			        flag="1"
		        	validateType="validnum"
			        emptyErrorTip="@string/code_empty_tip" />
		    </RelativeLayout>
		    
		    <com.tigerknows.ui.user.ExtValidationEditText
		        android:id="@+id/password_edt"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dp"
		        android:padding="8dp"
		        android:inputType="textPassword"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:textSize="18sp"
		        android:hint="@string/please_input_old_password"
		        android:background="@drawable/list_single_normal"
		        flag="2"
		        validateType="password"
		        formatErrorTip="@string/password_format_error_tip"
		        emptyErrorTip="@string/old_password_empty_tip" />
		    
		    <Button
		        android:id="@+id/confirm_btn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="16dp"
			    android:padding="8dp"
		        android:text="@string/confirm"
		        android:textSize="18sp"
		        android:textColor="@color/white"
		        android:background="@drawable/btn_blue_green" />
		</LinearLayout>
    </ScrollView>
</RelativeLayout>