<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/gray_dark" >
    
	<include android:id="@+id/title_view"
	    layout="@layout/title" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/title_view"
	    android:padding="2dp"
	    android:orientation="vertical"
	    >
	    
		<Button android:id="@+id/name_btn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/erreport_name_error"
		    android:gravity="left|center_vertical"
		    />
		<Button android:id="@+id/tel_btn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/app_name"
		    android:gravity="left|center_vertical"
		    />
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    >
		    
			<Button android:id="@+id/notexist_btn"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/erreport_not_exist"
			    android:layout_weight="1"
			    />
			<Button android:id="@+id/address_btn"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/erreport_address_error"
			    android:layout_weight="1"
			    />
		</LinearLayout>

		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    >
		    
			<Button android:id="@+id/redundancy_btn"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/erreport_redundancy"
			    android:layout_weight="1"
			    />
			<Button android:id="@+id/location_btn"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/erreport_location_error"
			    android:layout_weight="1"
			    />
		</LinearLayout>
		<Button android:id="@+id/other_btn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/erreport_other_error"
		    android:gravity="left|center_vertical"
		    />
	</LinearLayout>

</RelativeLayout>
