<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark" >

    <include
        android:id="@+id/title_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />
    
    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:layout_below="@+id/title_view"
    	android:background="@color/gray_dark" >
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="8dp" >
            
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		        <com.tigerknows.view.user.ExtValidationEditText
			        android:id="@+id/phone_edt"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:drawableLeft="@drawable/user_center_user"
			        android:singleLine="true"
			        android:maxLength="11"
			        android:ellipsize="end"
			        android:textSize="18sp"
			        android:background="@drawable/list_header_normal"
			        emptyErrorTip="@string/phone_empty_tip"
			        flag="0"
			        formatErrorTip="@string/phone_format_error_tip"
			        android:hint="@string/please_input_phone"
			        android:inputType="phone"
			        validateType="phone" >
			
			        <requestFocus />
			    </com.tigerknows.view.user.ExtValidationEditText>
			    <ImageView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="@drawable/bg_real_line" />
			    <com.tigerknows.view.user.ExtValidationEditText
			        android:id="@+id/password_edt"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:drawableLeft="@drawable/user_center_passwd"
			        android:singleLine="true"
			        android:ellipsize="end"
			        android:textSize="18sp"
	                android:background="@drawable/list_footer_normal"
			        emptyErrorTip="@string/password_empty_tip"
			        validateType="password"
			        formatErrorTip="@string/password_format_error_tip"
			        flag="1"
			        android:hint="@string/please_input_password"
			        android:inputType="textPassword" />
		    </LinearLayout>
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginTop="8dp"
		        android:orientation="horizontal" >
			    <Button
			        android:id="@+id/register_btn"
			        android:layout_width="0dp"
			        android:layout_weight="2"
			        android:layout_height="wrap_content"
			        android:text="@string/regist"
			        android:textSize="18sp"
			        android:textColor="@color/black"
			        android:padding="8dp"
			        android:background="@drawable/btn_register" />
			    <Button
			        android:id="@+id/login_btn"
			        android:layout_width="0dp"
			        android:layout_weight="3"
			        android:layout_height="match_parent"
			        android:layout_marginLeft="8dp"
			        android:text="@string/login"
			        android:textSize="18sp"
			        android:textColor="@color/white"
			        android:background="@drawable/btn_blue_green" />
		    </LinearLayout>
		    <TextView
		        android:id="@+id/forget_password_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="8dp"
		        android:layout_gravity="right|center_vertical"
		        android:text="@string/forget_password"
		        android:textColor="#009CFF"
			    android:textSize="14sp" />
		</LinearLayout>
    </ScrollView>
    
</RelativeLayout>