<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    android:id="@+id/root_view" >
	
	<include android:id="@+id/title_view"
     	layout="@layout/title" 
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content" />
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:layout_below="@+id/title_view" >
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="8dp" >
	        <com.tigerknows.view.user.ExtValidationEditText
		        android:id="@+id/old_password_edt"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
			    android:padding="8dp"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:inputType="textPassword"
			    android:textSize="18sp"
		        android:hint="@string/please_input_old_password"
		        android:background="@drawable/list_single_normal"
		        flag="0"
		        validateType="password"
		        formatErrorTip="@string/password_format_error_tip"
		        emptyErrorTip="@string/please_input_old_password" />
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:paddingTop="16dp" >
		        <com.tigerknows.view.user.ExtValidationEditText
			        android:id="@+id/new_password_edt"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:singleLine="true"
			        android:ellipsize="end"
			        android:inputType="textPassword"
			        android:textSize="18sp"
			        android:hint="@string/please_input_new_password"
			        android:background="@drawable/list_header_normal"
			        flag="1"
			        validateType="password"
			        emptyErrorTip="@string/new_password_empty_tip"
			        formatErrorTip="@string/password_format_error_tip"
			        unionFlag="2"
			        unionErrorTip="@string/password_union_error_tip" />
		        <ImageView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:background="@drawable/bg_real_line" />
			    <com.tigerknows.view.user.ExtValidationEditText
			        android:id="@+id/new_re_password_edt"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:singleLine="true"
			        android:ellipsize="end"
			        android:inputType="textPassword"
			        android:textSize="18sp"
			        android:hint="@string/please_input_new_password_again"
	                android:background="@drawable/list_footer_normal"
			        flag="2"
			        validateType="repassword"
			        emptyErrorTip="@string/please_input_new_password_again" />
	        </LinearLayout>
	        <TextView
		        android:id="@+id/forget_password_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="8dp"
		        android:layout_gravity="right|center_vertical"
		        android:text="@string/forget_password"
		        android:textColor="#009CFF"
			    android:textSize="14sp" />
	        <Button
		        android:id="@+id/confirm_btn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dp"
			    android:padding="8dp"
		        android:text="@string/confirm"
		        android:textSize="18sp"
		        android:textColor="@color/white"
		        android:background="@drawable/btn_blue_green" />
		</LinearLayout>
    </ScrollView>
</RelativeLayout>